# city-info

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
city_info/: __init__.py  __main__.py
tests/: test_city_info.py
